--- a/src/main/web/src/app/shared/search/results-container.component.scss
+++ b/src/main/web/src/app/shared/search/results-container.component.scss
@@ -176,7 +176,7 @@ h3.results-title {
 
 	.sorting-container {
 		display: flex;
-		align-items: baseline;
+		align-items: center;
 	}
 
 	.results-header {
