--- a/src/main/web/src/app/shop/shop-item/item-details/details/detail-page.component.scss
+++ b/src/main/web/src/app/shop/shop-item/item-details/details/detail-page.component.scss
@@ -245,6 +245,7 @@ memo-route-map ::ng-deep .sebm-google-map-container {
 
 	.item-details-wrapper {
 		border-radius: 4px;
+		min-height: 532px;
 
 		memo-multi-image-container,
 		memo-multi-image-container ::ng-deep .available-images-list,
